[gd_scene load_steps=2 format=3 uid="uid://dixld1ee0o8bp"]

[ext_resource type="Script" path="res://scripts/systems/UI/settings/audio_settings.gd" id="1_7n6ch"]

[node name="Audio" type="TabBar"]
visible = false
metadata/_tab_index = 2

[node name="AudioMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioOptions" type="VBoxContainer" parent="AudioMarginContainer"]
layout_mode = 2
script = ExtResource("1_7n6ch")

[node name="MasterVolumeItem" type="HBoxContainer" parent="AudioMarginContainer/AudioOptions"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="AudioMarginContainer/AudioOptions/MasterVolumeItem"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master volume"

[node name="MasterVolumeSlider" type="HSlider" parent="AudioMarginContainer/AudioOptions/MasterVolumeItem"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="MasterVolumePercent" type="Label" parent="AudioMarginContainer/AudioOptions/MasterVolumeItem"]
unique_name_in_owner = true
layout_mode = 2

[node name="SfxVolumeItem" type="HBoxContainer" parent="AudioMarginContainer/AudioOptions"]
layout_mode = 2

[node name="SfxVolumeLabel" type="Label" parent="AudioMarginContainer/AudioOptions/SfxVolumeItem"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sound effects volume"

[node name="SfxVolumeSlider" type="HSlider" parent="AudioMarginContainer/AudioOptions/SfxVolumeItem"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="SfxVolumePercent" type="Label" parent="AudioMarginContainer/AudioOptions/SfxVolumeItem"]
unique_name_in_owner = true
layout_mode = 2

[node name="MusicVolumeItem" type="HBoxContainer" parent="AudioMarginContainer/AudioOptions"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="AudioMarginContainer/AudioOptions/MusicVolumeItem"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music volume"

[node name="MusicVolumeSlider" type="HSlider" parent="AudioMarginContainer/AudioOptions/MusicVolumeItem"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumePercent" type="Label" parent="AudioMarginContainer/AudioOptions/MusicVolumeItem"]
unique_name_in_owner = true
layout_mode = 2

[node name="AmbienceVolumeItem" type="HBoxContainer" parent="AudioMarginContainer/AudioOptions"]
layout_mode = 2

[node name="AmbienceVolumeLabel" type="Label" parent="AudioMarginContainer/AudioOptions/AmbienceVolumeItem"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ambience volume"

[node name="AmbienceVolumeSlider" type="HSlider" parent="AudioMarginContainer/AudioOptions/AmbienceVolumeItem"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="AmbienceVolumePercent" type="Label" parent="AudioMarginContainer/AudioOptions/AmbienceVolumeItem"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="value_changed" from="AudioMarginContainer/AudioOptions/MasterVolumeItem/MasterVolumeSlider" to="AudioMarginContainer/AudioOptions" method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="AudioMarginContainer/AudioOptions/SfxVolumeItem/SfxVolumeSlider" to="AudioMarginContainer/AudioOptions" method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="AudioMarginContainer/AudioOptions/MusicVolumeItem/MusicVolumeSlider" to="AudioMarginContainer/AudioOptions" method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="AudioMarginContainer/AudioOptions/AmbienceVolumeItem/AmbienceVolumeSlider" to="AudioMarginContainer/AudioOptions" method="_on_ambience_volume_slider_value_changed"]
